added all relevant papers

--- a/CS-based_ECG_Compressor.ipynb
+++ b/CS-based_ECG_Compressor.ipynb
@@ -497,28 +497,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reconstruction methods\n",
-    "\n",
-    "__\"classic\" _l1-minimization_ problem__\n",
-    "TO BE WRITTEN\n",
-    "\n",
-    "__LASSO__\n",
-    "TO BE WRITTEN\n",
-    "\n",
-    "__Greedy Algorithms__\n",
-    "TO BE WRITTEN\n",
-    "\n",
-    "__Smooth-L0__\n",
-    "TO BE WRITTEN\n",
-    "\n",
-    "__Basis Pursuit__\n",
-    "TO BE WRITTEN"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Dictionaries\n",
     "\n",
     "#### _fixed dictionaries_ vs _adaptive dictionary learning_\n",
@@ -533,17 +511,21 @@
     "__DWT__\n",
     "TO BE WRITTEN\n",
     "\n",
-    "__KL__\n",
-    "TO BE WRITTEN\n",
-    "\n",
     "\n",
     "#### Adaptive Dictionary Learning\n",
     "TO BE WRITTEN\n",
     "\n",
     "__MOM__\n",
-    "TO BE WRITTEN\n",
+    "TO BE WRITTEN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reconstruction methods\n",
     "\n",
-    "__K-SVD__\n",
+    "__Smooth-L0__\n",
     "TO BE WRITTEN"
    ]
   },
@@ -583,8 +565,9 @@
     "__Evaluate result__\n",
     "1. Sampling faster for smaller $\\Phi$?\n",
     "2. Which dictionary are the best? (How fast, how accurate)\n",
-    "3. Which recovery method is best? (How fast, how accurate)\n",
-    "4. Robustness to noise?\n",
+    "3. With Kronecker vs without\n",
+    "4. ~~Which recovery method is best? (How fast, how accurate)~~ only use Smooth-L0\n",
+    "5. Robustness to noise?\n",
     "\n",
     "---"
    ]
@@ -1233,6 +1216,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Experimental Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Conclusions"
    ]
   },
@@ -1240,7 +1230,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Future Developements"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test other possible reconstruction methdos\n",
+    "\n",
+    "__\"classic\" _l1-minimization_ problem__\n",
+    "TO BE WRITTEN\n",
+    "\n",
+    "__LASSO__\n",
+    "TO BE WRITTEN\n",
+    "\n",
+    "__Greedy Algorithms__\n",
+    "TO BE WRITTEN\n",
+    "\n",
+    "__Basis Pursuit__\n",
     "TO BE WRITTEN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test other dictionaries\n",
+    "\n",
+    "\n",
+    "#### Fixed dictionaries\n",
+    "\n",
+    "__KL__\n",
+    "TO BE WRITTEN\n",
+    "\n",
+    "\n",
+    "#### Adaptive Dictionary Learning\n",
+    "\n",
+    "__MOM__\n",
+    "TO BE WRITTEN\n"
    ]
   },
   {
