--- a/buildingProgram.ipynb
+++ b/buildingProgram.ipynb
@@ -1950,7 +1950,7 @@
     "output_file = output_folder / 'sl0_parameter_sweep_results.csv'\n",
     "results_df.to_csv(output_file, index=False)\n",
     "\n",
-    "print(f\"Parameter sweep complete and results saved to '{output_file}'\""
+    "print(f\"Parameter sweep complete and results saved to '{output_file}'\")"
    ]
   }
  ],
