--- a/buildingProgram.ipynb
+++ b/buildingProgram.ipynb
@@ -134,6 +134,167 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\"\"\"\n",
+    "This script provides functions to calculate the Signal-to-Noise Ratio (SNR) between \n",
+    "an original and a reconstructed signal, and to plot these signals together, displaying \n",
+    "the SNR. It also includes functionality to save the plotted signals to a specified directory.\n",
+    "\"\"\"\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "def calculate_snr(signal, recovered_signal):\n",
+    "    \"\"\"\n",
+    "    Calculates the Signal-to-Noise Ratio (SNR) between the original signal and the recovered signal.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    signal : numpy.ndarray\n",
+    "        The original signal.\n",
+    "    recovered_signal : numpy.ndarray\n",
+    "        The recovered signal after some processing or recovery algorithm.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    snr : float\n",
+    "        The Signal-to-Noise Ratio (SNR) in decibels (dB).\n",
+    "\n",
+    "    Notes\n",
+    "    -----\n",
+    "    - The SNR is calculated as 20 * log10(norm(original_signal) / norm(original_signal - recovered_signal)).\n",
+    "    - A higher SNR value indicates a better recovery, with less error relative to the original signal.\n",
+    "    \"\"\"\n",
+    "    error = recovered_signal - signal\n",
+    "    snr = 20 * np.log10(np.linalg.norm(signal) / np.linalg.norm(error))\n",
+    "    \n",
+    "    return snr\n",
+    "\n",
+    "\n",
+    "\n",
+    "def plot_signals(original_signal, reconstructed_signal, snr=None, original_name=\"Original Signal\", \n",
+    "                 reconstructed_name=\"Reconstructed Signal\", save_path=None, filename=None,\n",
+    "                 start_pct=0.0, num_samples=None, show_snr_box=False):\n",
+    "    \"\"\"\n",
+    "    Plots a section of the original signal and the reconstructed signal on the same plot with the given names,\n",
+    "    displays the Signal-to-Noise Ratio (SNR) in a text box if enabled, and saves the plot to a specified directory.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    original_signal : numpy.ndarray\n",
+    "        The original signal to be plotted.\n",
+    "    \n",
+    "    reconstructed_signal : numpy.ndarray\n",
+    "        The reconstructed signal to be plotted.\n",
+    "    \n",
+    "    snr : float, optional (default=None)\n",
+    "        The Signal-to-Noise Ratio to display. If None, it will be computed using the original and reconstructed signals.\n",
+    "    \n",
+    "    original_name : str, optional (default=\"Original Signal\")\n",
+    "        The name to display for the original signal in the plot.\n",
+    "    \n",
+    "    reconstructed_name : str, optional (default=\"Reconstructed Signal\")\n",
+    "        The name to display for the reconstructed signal in the plot.\n",
+    "    \n",
+    "    save_path : str, optional\n",
+    "        The directory path where the plot should be saved. If None, the plot will not be saved.\n",
+    "    \n",
+    "    filename : str, optional\n",
+    "        The name of the file to save the plot as. If None and save_path is provided, a default name will be generated.\n",
+    "    \n",
+    "    start_pct : float, optional (default=0.0)\n",
+    "        The percentage (between 0 and 1) of the way through the signal to start plotting. For example, 0.5 means start \n",
+    "        from the halfway point of the signals.\n",
+    "    \n",
+    "    num_samples : int, optional (default=None)\n",
+    "        The number of samples to plot from the start point. If None, it will plot to the end of the signals.\n",
+    "    \n",
+    "    show_snr_box : bool, optional (default=True)\n",
+    "        Whether to display the SNR value in a text box on the plot.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Ensure the signals have the same length\n",
+    "    if len(original_signal) != len(reconstructed_signal):\n",
+    "        raise ValueError(\"The original signal and the reconstructed signal must have the same length.\")\n",
+    "    \n",
+    "    # Calculate the start index based on percentage\n",
+    "    start_idx = int(start_pct * len(original_signal))\n",
+    "    \n",
+    "    # Determine the end index based on num_samples\n",
+    "    if num_samples is not None:\n",
+    "        end_idx = start_idx + num_samples\n",
+    "    else:\n",
+    "        end_idx = len(original_signal)\n",
+    "    \n",
+    "    # Ensure that the end index does not exceed the signal length\n",
+    "    end_idx = min(end_idx, len(original_signal))\n",
+    "\n",
+    "    # Slice the signals to the selected section\n",
+    "    original_signal_section = original_signal[start_idx:end_idx]\n",
+    "    reconstructed_signal_section = reconstructed_signal[start_idx:end_idx]\n",
+    "    \n",
+    "    # Calculate SNR if not provided\n",
+    "    if snr is None and show_snr_box:\n",
+    "        snr = calculate_snr(original_signal_section, reconstructed_signal_section)\n",
+    "    \n",
+    "    # Create the plot\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.plot(original_signal_section, label=original_name, color='blue', linewidth=1.5)\n",
+    "    plt.plot(reconstructed_signal_section, label=reconstructed_name, color='red', linestyle='--', linewidth=1.5)\n",
+    "    \n",
+    "    # Title and labels\n",
+    "    plt.title(f\"{original_name} vs {reconstructed_name} (Section: {start_pct*100:.1f}% - {num_samples} samples)\")\n",
+    "    plt.xlabel('Sample Index')\n",
+    "    plt.ylabel('Amplitude')\n",
+    "    \n",
+    "    # Add a legend in the upper-right corner with a white background\n",
+    "    plt.legend(loc='upper right', frameon=True, facecolor='white')\n",
+    "    \n",
+    "    # Display SNR in a text box in the top-left corner if show_snr_box is True\n",
+    "    if show_snr_box and snr is not None:\n",
+    "        plt.text(0.05, 0.95, f'SNR: {snr:.2f} dB', transform=plt.gca().transAxes,\n",
+    "                fontsize=12, verticalalignment='top', horizontalalignment='left',\n",
+    "                bbox=dict(boxstyle='round', facecolor='white', alpha=0.8))\n",
+    "\n",
+    "    # Grid and show plot\n",
+    "    plt.grid(True)\n",
+    "    \n",
+    "    # Save the plot if a save path is provided\n",
+    "    if save_path is not None:\n",
+    "        # Ensure the save directory exists\n",
+    "        os.makedirs(save_path, exist_ok=True)\n",
+    "        \n",
+    "        # Use provided filename or generate a default one\n",
+    "        if filename is None:\n",
+    "            filename = f\"{original_name}_vs_{reconstructed_name}_section.png\"\n",
+    "        \n",
+    "        # Define the file path to save the plot\n",
+    "        file_path = os.path.join(save_path, filename)\n",
+    "        plt.savefig(file_path)\n",
+    "        print(f\"Plot saved to {file_path}\")\n",
+    "    \n",
+    "    # Display the plot\n",
+    "    plt.show()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Measurement matrix"
    ]
   },
@@ -1010,167 +1171,6 @@
     "        sigma = sigma * sigma_decrease_factor\n",
     "\n",
     "    return s\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Evaluation of results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "\"\"\"\n",
-    "This script provides functions to calculate the Signal-to-Noise Ratio (SNR) between \n",
-    "an original and a reconstructed signal, and to plot these signals together, displaying \n",
-    "the SNR. It also includes functionality to save the plotted signals to a specified directory.\n",
-    "\"\"\"\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import os\n",
-    "\n",
-    "def calculate_snr(signal, recovered_signal):\n",
-    "    \"\"\"\n",
-    "    Calculates the Signal-to-Noise Ratio (SNR) between the original signal and the recovered signal.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    signal : numpy.ndarray\n",
-    "        The original signal.\n",
-    "    recovered_signal : numpy.ndarray\n",
-    "        The recovered signal after some processing or recovery algorithm.\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    snr : float\n",
-    "        The Signal-to-Noise Ratio (SNR) in decibels (dB).\n",
-    "\n",
-    "    Notes\n",
-    "    -----\n",
-    "    - The SNR is calculated as 20 * log10(norm(original_signal) / norm(original_signal - recovered_signal)).\n",
-    "    - A higher SNR value indicates a better recovery, with less error relative to the original signal.\n",
-    "    \"\"\"\n",
-    "    error = recovered_signal - signal\n",
-    "    snr = 20 * np.log10(np.linalg.norm(signal) / np.linalg.norm(error))\n",
-    "    \n",
-    "    return snr\n",
-    "\n",
-    "\n",
-    "\n",
-    "def plot_signals(original_signal, reconstructed_signal, snr=None, original_name=\"Original Signal\", \n",
-    "                 reconstructed_name=\"Reconstructed Signal\", save_path=None, filename=None,\n",
-    "                 start_pct=0.0, num_samples=None, show_snr_box=False):\n",
-    "    \"\"\"\n",
-    "    Plots a section of the original signal and the reconstructed signal on the same plot with the given names,\n",
-    "    displays the Signal-to-Noise Ratio (SNR) in a text box if enabled, and saves the plot to a specified directory.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    original_signal : numpy.ndarray\n",
-    "        The original signal to be plotted.\n",
-    "    \n",
-    "    reconstructed_signal : numpy.ndarray\n",
-    "        The reconstructed signal to be plotted.\n",
-    "    \n",
-    "    snr : float, optional (default=None)\n",
-    "        The Signal-to-Noise Ratio to display. If None, it will be computed using the original and reconstructed signals.\n",
-    "    \n",
-    "    original_name : str, optional (default=\"Original Signal\")\n",
-    "        The name to display for the original signal in the plot.\n",
-    "    \n",
-    "    reconstructed_name : str, optional (default=\"Reconstructed Signal\")\n",
-    "        The name to display for the reconstructed signal in the plot.\n",
-    "    \n",
-    "    save_path : str, optional\n",
-    "        The directory path where the plot should be saved. If None, the plot will not be saved.\n",
-    "    \n",
-    "    filename : str, optional\n",
-    "        The name of the file to save the plot as. If None and save_path is provided, a default name will be generated.\n",
-    "    \n",
-    "    start_pct : float, optional (default=0.0)\n",
-    "        The percentage (between 0 and 1) of the way through the signal to start plotting. For example, 0.5 means start \n",
-    "        from the halfway point of the signals.\n",
-    "    \n",
-    "    num_samples : int, optional (default=None)\n",
-    "        The number of samples to plot from the start point. If None, it will plot to the end of the signals.\n",
-    "    \n",
-    "    show_snr_box : bool, optional (default=True)\n",
-    "        Whether to display the SNR value in a text box on the plot.\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    # Ensure the signals have the same length\n",
-    "    if len(original_signal) != len(reconstructed_signal):\n",
-    "        raise ValueError(\"The original signal and the reconstructed signal must have the same length.\")\n",
-    "    \n",
-    "    # Calculate the start index based on percentage\n",
-    "    start_idx = int(start_pct * len(original_signal))\n",
-    "    \n",
-    "    # Determine the end index based on num_samples\n",
-    "    if num_samples is not None:\n",
-    "        end_idx = start_idx + num_samples\n",
-    "    else:\n",
-    "        end_idx = len(original_signal)\n",
-    "    \n",
-    "    # Ensure that the end index does not exceed the signal length\n",
-    "    end_idx = min(end_idx, len(original_signal))\n",
-    "\n",
-    "    # Slice the signals to the selected section\n",
-    "    original_signal_section = original_signal[start_idx:end_idx]\n",
-    "    reconstructed_signal_section = reconstructed_signal[start_idx:end_idx]\n",
-    "    \n",
-    "    # Calculate SNR if not provided\n",
-    "    if snr is None and show_snr_box:\n",
-    "        snr = calculate_snr(original_signal_section, reconstructed_signal_section)\n",
-    "    \n",
-    "    # Create the plot\n",
-    "    plt.figure(figsize=(10, 6))\n",
-    "    plt.plot(original_signal_section, label=original_name, color='blue', linewidth=1.5)\n",
-    "    plt.plot(reconstructed_signal_section, label=reconstructed_name, color='red', linestyle='--', linewidth=1.5)\n",
-    "    \n",
-    "    # Title and labels\n",
-    "    plt.title(f\"{original_name} vs {reconstructed_name} (Section: {start_pct*100:.1f}% - {num_samples} samples)\")\n",
-    "    plt.xlabel('Sample Index')\n",
-    "    plt.ylabel('Amplitude')\n",
-    "    \n",
-    "    # Add a legend in the upper-right corner with a white background\n",
-    "    plt.legend(loc='upper right', frameon=True, facecolor='white')\n",
-    "    \n",
-    "    # Display SNR in a text box in the top-left corner if show_snr_box is True\n",
-    "    if show_snr_box and snr is not None:\n",
-    "        plt.text(0.05, 0.95, f'SNR: {snr:.2f} dB', transform=plt.gca().transAxes,\n",
-    "                fontsize=12, verticalalignment='top', horizontalalignment='left',\n",
-    "                bbox=dict(boxstyle='round', facecolor='white', alpha=0.8))\n",
-    "\n",
-    "    # Grid and show plot\n",
-    "    plt.grid(True)\n",
-    "    \n",
-    "    # Save the plot if a save path is provided\n",
-    "    if save_path is not None:\n",
-    "        # Ensure the save directory exists\n",
-    "        os.makedirs(save_path, exist_ok=True)\n",
-    "        \n",
-    "        # Use provided filename or generate a default one\n",
-    "        if filename is None:\n",
-    "            filename = f\"{original_name}_vs_{reconstructed_name}_section.png\"\n",
-    "        \n",
-    "        # Define the file path to save the plot\n",
-    "        file_path = os.path.join(save_path, filename)\n",
-    "        plt.savefig(file_path)\n",
-    "        print(f\"Plot saved to {file_path}\")\n",
-    "    \n",
-    "    # Display the plot\n",
-    "    plt.show()\n",
-    "\n"
    ]
   },
   {
