--- a/buildingProgram.ipynb
+++ b/buildingProgram.ipynb
@@ -2458,7 +2458,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test"
+    "## Visualize and recover wfdb signals"
    ]
   },
   {
