removed useless parts of the pT

--- a/projTheory.ipynb
+++ b/projTheory.ipynb
@@ -11,38 +11,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Table of Contents\n",
-    "\n",
-    "TO BE WRITTEN"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Goal of Project\n",
-    "\n",
-    "TO BE WRITTEN\n",
-    "\n",
-    "Roadmap:\n",
-    "- reproducing idea from paper bla bla bla\n",
-    "- in general: study (\"emulate\", not really) best solution for a CS-based compressor for ECG to be used with remote-ECG-devices, small, limited storage capability, limited computational power:\n",
-    "    - __phase 1__ compute dictionary (only for adaptive dictionaries) $\\Psi$ and measurement matrix $\\Phi$ before actually using the device to measure the patient ecg\n",
-    "    - __phase 2__ pass $\\Psi$, $\\Phi$ to the device, take __already compressed measurements__ $y$ (we'll see that this is core idea of CS)\n",
-    "    - __phase 3__ store only $y$, $\\Psi$, $\\Phi$ and send them back to _more computationally powerful system_ where recovery happens\n",
-    "- paper focuses also on how such hardware is built, we will be more generic\n",
-    "- exploit data from Physionet.org exactly like the paper did\n",
-    "- test different dictionaries, both _fixed dictionaries_ (_DCT_, _DWT_, _KL_) and _adaptive dictionary learning_ (_MOM_, _K-SVD_)\n",
-    "- test how dimension of measurement matrix $\\Phi$ is related to processing speed in __phase 2__\n",
-    "- test different _recovery methods_ (\"classic\" _l1-minimization_, _LASSO_, _Greedy Algorithms_, _Smooth-L0_, _Baisis Pursuit_), always use newly developed __Kronecker technique__ \n",
-    "- testing robustness to noise with _additive noise_\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Theoretical Review"
    ]
   },
@@ -482,7 +450,7 @@
     "This idea is reproposed in the present work.\n",
     "\n",
     "#### Fixed dictionaries\n",
-    "In this work the _DCT_, _DWT_ __fixed dictionaries__ are utilized as a benchmark to test how dictionary learning can improve reconstruction.\n",
+    "In this work the _DCT_ __fixed dictionaries__ is utilized as a benchmark to test how dictionary learning can improve reconstruction.\n",
     "\n",
     "It's assumed that the reader possesses the necessary knowledge about the topic. This are well known methdos employed in the _signal compression \"world\"_.\n",
     "An overview is provided at the end of the document in the __Appendix__.\n",
@@ -490,119 +458,52 @@
     "\n",
     "#### Adaptive Dictionary Learning\n",
     "\n",
-    "__MOM__\n"
+    "In this work, two main adaptive dictionary learning algorithms are used: the *Method of Optimal Directions (MOD)* and *K-Singular Value Decomposition (K-SVD)*.\n",
+    "\n",
+    "The *Method of Optimal Directions (MOD)* is an iterative algorithm where, at each iteration, the goal is to update the dictionary to minimize the reconstruction error given the current sparse coefficients. The dictionary is updated by solving a least-squares problem. This method is particularly efficient when the training set is well-chosen and representative of the signals to be compressed. In this context, MOD generates a dictionary that provides a better sparse representation of the ECG signal, especially when the characteristics of the signal are stable over time, such as in the case of patient-specific ECG data.\n",
+    "\n",
+    "*K-Singular Value Decomposition (K-SVD)*, on the other hand, is another adaptive dictionary learning technique that builds on the principles of the MOD algorithm but further refines the dictionary update step. In K-SVD, the dictionary atoms are updated one at a time through a singular value decomposition process. This method improves the sparsity of the signal representation by optimizing both the sparse coefficients and the dictionary atoms simultaneously. K-SVD is known for its flexibility and ability to handle complex signals, making it a suitable candidate for ECG signal compression where achieving higher sparsity can significantly improve the reconstruction quality.\n",
+    "\n",
+    "Both methods allow for the creation of a more tailored dictionary compared to fixed ones, such as DCT, leading to a sparser representation of the ECG data. This sparser representation compensates for the reduction in the size of the measurement matrix, helping to maintain or improve the quality of the reconstructed signal. These adaptive techniques are particularly advantageous in scenarios where the signal remains relatively consistent over time, such as in long-term ECG monitoring, offering a substantial improvement over fixed dictionaries.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reconstruction method\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Reconstruction method\n",
     "The classic solution in CS is to solve the $\\ell_1$-minimization problem, equivalent to $\\ell_0$-minimization problem. In real cases is always a good idea to considere presence of noise, hence the problem is:\n",
     "$$\n",
     "\\hat{s} = \\arg_{s} \\min \\|s\\|_1 \\text{ subject to } \\|y - \\Phi \\Psi s\\|_2 \\leq \\epsilon\n",
     "$$\n",
     "where $\\epsilon$ is a bound on the noise level.\n",
     "\n",
-    "Directly solving the problem __is not convenient in terms of time complexity__, especially because real measurements always present some noise, which needs to be taken into account. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "__LASSO Compressed Sensing__\n",
+    "Directly solving the problem __is not convenient in terms of time complexity__, especially because real measurements always present some noise, which needs to be taken into account. \n",
     "\n",
-    "The first solution method proposed is the following: the signal can be recovered using the LASSO formulation, which balances the $\\ell_1$ norm of the signal with the fidelity to the measurements:\n",
+    "#### SL0\n",
+    "\n",
+    "The *Smoothed ℓ0 (SL0)* algorithm offers an efficient alternative to solving the ℓ1-minimization problem by approximating the ℓ0 norm. The ℓ0 norm represents the number of non-zero elements in a vector, which directly captures sparsity, but solving the ℓ0-minimization problem is NP-hard. To address this, SL0 approximates the ℓ0 norm using a smooth function, which is easier to minimize.\n",
+    "\n",
+    "The key idea behind SL0 is to use a sequence of smooth functions to approximate the ℓ0 norm, starting with a highly smooth (wide) approximation and gradually reducing the smoothness (narrowing the approximation) as the algorithm progresses. This allows the algorithm to efficiently find sparse solutions by iteratively refining the approximation.\n",
+    "\n",
+    "The SL0 algorithm can be summarized in the following steps:\n",
+    "\n",
+    "1. **Initialization**: The algorithm starts by choosing an initial estimate for the sparse coefficients, typically based on a least-squares solution.\n",
+    "   \n",
+    "2. **Smoothing and gradient descent**: A smooth approximation of the ℓ0 norm is applied, and a gradient descent method is used to minimize the smooth function. This step leads to a sparsity-promoting solution.\n",
+    "   \n",
+    "3. **Progressive narrowing**: The smooth function is gradually made less smooth (narrower) over iterations, which more closely approximates the true ℓ0 norm. As the smoothing parameter decreases, the solution becomes sparser.\n",
+    "\n",
+    "4. **Stopping criterion**: The algorithm stops once the approximation is sufficiently narrow or a desired level of sparsity is achieved.\n",
+    "\n",
+    "SL0 is particularly appealing because it avoids the more computationally expensive ℓ1-minimization while still producing sparse solutions. It also directly incorporates noise tolerance by allowing a relaxation of the equality constraint, as in the standard compressed sensing problem:\n",
     "\n",
     "$$\n",
-    "\\hat{s} = \\arg_s \\min \\left(\\frac{1}{2} \\|y - \\Phi \\Psi s\\|_2^2 + \\lambda \\|s\\|_1 \\right)\n",
+    "\\hat{s} = \\arg_{s} \\min \\|s\\|_0 \\text{ subject to } \\|y - \\Phi \\Psi s\\|_2 \\leq \\epsilon\n",
     "$$\n",
     "\n",
-    "Here, $\\lambda$ is a regularization parameter that controls the trade-off between the sparsity of the solution and the accuracy of the reconstruction. A larger $\\lambda$ emphasizes sparsity, while a smaller $\\lambda$ emphasizes data fidelity.\n",
-    "\n",
-    "Note that $LASSO$ formulation already accounts for noise using the $\\ell_2$ minimization on $\\|y - \\Phi \\Psi s\\|_2^2$, instead of enforcing the condition $y = \\Phi \\Psi s$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "__Smooth-L0__"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Kronecker Techinque\n",
-    "\n",
-    "TO BE WRITTEN"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Experimental Results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Conclusions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Future Developements"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Test other possible reconstruction methdos\n",
-    "\n",
-    "__\"classic\" _l1-minimization_ problem__\n",
-    "TO BE WRITTEN\n",
-    "\n",
-    "__LASSO__\n",
-    "TO BE WRITTEN\n",
-    "\n",
-    "__Greedy Algorithms__\n",
-    "TO BE WRITTEN\n",
-    "\n",
-    "__Basis Pursuit__\n",
-    "TO BE WRITTEN"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Test other dictionaries\n",
-    "\n",
-    "\n",
-    "#### Fixed dictionaries\n",
-    "\n",
-    "__KL__\n",
-    "TO BE WRITTEN\n",
-    "\n",
-    "\n",
-    "#### Adaptive Dictionary Learning\n",
-    "\n",
-    "__MOM__\n",
-    "TO BE WRITTEN\n"
+    "Though SL0 approximates the ℓ0 norm, it has been shown to perform well in practical applications, often providing faster solutions compared to ℓ1-based methods while maintaining accuracy in the presence of noise."
    ]
   },
   {
